test/fail/var-override.grace
constructor new {
  method name {}
}

object {
  inherits new

  var name := object {}
}
